# olymp_student

./: .env.example  README.md  pyproject.toml  requirements.txt
olympiad-bot/: .env.example  .gitignore  alembic.ini  pyproject.toml
olympiad-bot/docker/: Dockerfile
olympiad-bot/scripts/: run_dev.sh
olympiad-bot/src/bot/: __init__.py  app.py  config.py
olympiad-bot/src/bot/handlers/admin/: panel.py
olympiad-bot/src/bot/handlers/user/: catalog.py  favorites.py  materials.py  subscription_stub.py  universities.py
olympiad-bot/src/bot/keyboards/: calendar.py  favorites.py  main_menu.py  subscription.py  universities.py
olympiad-bot/src/bot/middlewares/: subscription_gate.py
olympiad-bot/src/bot/repository/: db.py  models.py
olympiad-bot/src/bot/services/: calendar_service_stub.py  materials_service.py  olympiad_service.py  subscription_service.py
olympiad-bot/src/bot/utils/: logging.py  scheduler.py  texts.py
scripts/: precommit.sh
src/bot/: app.py  config.py
src/bot/handlers/admin/: materials.py  panel.py
src/bot/handlers/common/: help.py  start.py
src/bot/handlers/user/: calendar_sync_stub.py  catalog.py  favorites.py  materials.py  subscription_stub.py  universities.py
src/bot/keyboards/: admin_menu.py  catalog.py
src/bot/repository/: db.py  models.py
src/bot/repository/migrations/: env.py
src/bot/repository/migrations/versions/: 202402200001_initial_schema.py
src/bot/services/: favorites_service.py  materials_service.py  reminder_service.py  universities_service.py
src/bot/utils/: scheduler.py  texts.py
