[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "olympiad-bot"
version = "0.1.0"
description = "Telegram bot for olympiad students"
authors = [
    {name = "Olympiad Bot Team"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20",
    "pydantic-settings>=2",
    "SQLAlchemy>=2",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "apscheduler>=3.10",
    "python-dotenv>=1",
    "loguru>=0.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
