[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "olympiad-bot"
version = "0.1.0"
description = "Telegram bot for olympiad students"
authors = [
    {name = "Olympiad Bot Team"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiogram>=3.20",
    "pydantic-settings",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "apscheduler",
    "python-dotenv",
    "loguru"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
